--- a/index.html
+++ b/index.html
@@ -3,140 +3,37 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MCOSII</title>
-    <link rel="stylesheet" href="styles/main.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <title>My Portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
-    <!-- Navigation -->
-    <nav class="navbar">
-        <div class="container">
-            <div class="logo">MCOSII</div>
-            <ul class="nav-links">
-                <li><a href="#home">Home</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#academics">Academics</a></li>
-                <li><a href="#admissions">Admissions</a></li>
-                <li><a href="#contact">Contact</a></li>
+    <header>
+        <h1>Welcome to Carson's Portfolio</h1>
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="about.html">About</a>
+            <a href="portfolio.html">Portfolio</a>
+            <a href="contact.html">Contact</a>
+        </nav>
+    </header>
+    <main>
+        <section>
+            <img src="images/profile.jpg" alt="Profile Picture">
+            <p>Hi! I'm Carson. Welcome to my website!</p>
+            <p>I'm learning how to code and this is my third website.</p>
+            <p>My favorite things are:</p>
+            <ul>
+                <li>Playing video games</li>
+                <li>Learning to code</li>
+                <li>Hanging out with friends</li>
             </ul>
-            <div class="hamburger">
-                <span></span>
-                <span></span>
-                <span></span>
-            </div>
-        </div>
-    </nav>
-
-    <!-- Hero Section -->
-    <section id="home" class="hero">
-        <div class="container">
-            <h1>Welcome to MCOSII</h1>
-            <h2>Home of the Vipers</h2>
-            <p>Empowering minds through open source intelligence education</p>
-            <a href="#admissions" class="cta-button">Apply Now</a>
-        </div>
-    </section>
-
-    <!-- About Section -->
-    <section id="about" class="about">
-        <div class="container">
-            <h2>About Our Institution</h2>
-            <div class="about-grid">
-                <div class="about-card">
-                    <i class="fas fa-graduation-cap"></i>
-                    <h3>Excellence in Education</h3>
-                    <p>Providing cutting-edge education in open source intelligence and analysis.</p>
-                </div>
-                <div class="about-card">
-                    <i class="fas fa-users"></i>
-                    <h3>Expert Faculty</h3>
-                    <p>Learn from industry professionals and experienced educators.</p>
-                </div>
-                <div class="about-card">
-                    <i class="fas fa-globe"></i>
-                    <h3>Global Perspective</h3>
-                    <p>Develop skills for the modern intelligence landscape.</p>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- Academics Section -->
-    <section id="academics" class="academics">
-        <div class="container">
-            <h2>Academic Programs</h2>
-            <div class="programs-grid">
-                <div class="program-card">
-                    <h3>Digital Intelligence</h3>
-                    <p>Learn advanced digital investigation techniques and tools.</p>
-                </div>
-                <div class="program-card">
-                    <h3>Data Analysis</h3>
-                    <p>Master the art of analyzing and interpreting complex data sets.</p>
-                </div>
-                <div class="program-card">
-                    <h3>Cyber Security</h3>
-                    <p>Understand the principles of digital security and protection.</p>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- Contact Section -->
-    <section id="contact" class="contact">
-        <div class="container">
-            <h2>Contact Us</h2>
-            <div class="contact-grid">
-                <div class="contact-info">
-                    <h3>Get in Touch</h3>
-                    <p><i class="fas fa-map-marker-alt"></i> Mahoning County, OH</p>
-                    <p><i class="fas fa-phone"></i> (555) 123-4567</p>
-                    <p><i class="fas fa-envelope"></i> info@mcosii.edu</p>
-                </div>
-                <form class="contact-form">
-                    <input type="text" placeholder="Name" required>
-                    <input type="email" placeholder="Email" required>
-                    <textarea placeholder="Message" required></textarea>
-                    <button type="submit" class="submit-button">Send Message</button>
-                </form>
-            </div>
-        </div>
-    </section>
-
-    <!-- Footer -->
-    <footer class="footer">
-        <div class="container">
-            <div class="footer-content">
-                <div class="footer-section">
-                    <h3>MCOSII</h3>
-                    <p>Empowering the next generation of intelligence professionals.</p>
-                </div>
-                <div class="footer-section">
-                    <h3>Quick Links</h3>
-                    <ul>
-                        <li><a href="#home">Home</a></li>
-                        <li><a href="#about">About</a></li>
-                        <li><a href="#academics">Academics</a></li>
-                        <li><a href="#contact">Contact</a></li>
-                    </ul>
-                </div>
-                <div class="footer-section">
-                    <h3>Connect With Us</h3>
-                    <div class="social-links">
-                        <a href="#"><i class="fab fa-facebook"></i></a>
-                        <a href="#"><i class="fab fa-twitter"></i></a>
-                        <a href="#"><i class="fab fa-linkedin"></i></a>
-                        <a href="#"><i class="fab fa-instagram"></i></a>
-                    </div>
-                </div>
-            </div>
-            <div class="footer-bottom">
-                <p>&copy; 2024 Mahoning County Open Source Intelligence Institution. All rights reserved.</p>
-            </div>
-        </div>
+        </section>
+    </main>
+    <footer>
+        <p>&copy; 2024 Carson. All rights reserved.</p>
     </footer>
-
-    <script src="scripts/main.js"></script>
 </body>
 </html> 
