--- a/index.html
+++ b/index.html
@@ -12,28 +12,65 @@
 <body>
     <header>
         <h1>Welcome to Carson's Portfolio</h1>
-        <nav>
-            <a href="index.html">Home</a>
-            <a href="about.html">About</a>
-            <a href="portfolio.html">Portfolio</a>
-            <a href="contact.html">Contact</a>
-        </nav>
     </header>
-    <main>
-        <section>
-            <img src="images/profile.jpg" alt="Profile Picture">
-            <p>Hi! I'm Carson. Welcome to my website!</p>
-            <p>I'm learning how to code and this is my third website.</p>
-            <p>My favorite things are:</p>
+
+    <main class="grid-container">
+        <section class="bio">
+            <h2>About Me</h2>
+            <p>Hi! My name is Carson, and I am an aspiring web developer. I love learning about coding and creating new projects. In my free time, I enjoy playing video games, learning to code, and hanging out with friends.</p>
+            <img src="images/profile.jpg" alt="A picture of me">
+            <h3>What I've Learned:</h3>
             <ul>
-                <li>Playing video games</li>
-                <li>Learning to code</li>
-                <li>Hanging out with friends</li>
+                <li>Full-stack development with React and Django</li>
+                <li>Working with databases</li>
+                <li>Collaboration using Git and GitHub</li>
+                <li>Building responsive and user-friendly interfaces</li>
+                <li>Project planning and management</li>
             </ul>
         </section>
+
+        <section class="projects">
+            <h2>My Projects</h2>
+            <div class="project">
+                <h3>HealthHive - Health Tracking App</h3>
+                <img src="images/healthhive.jpg" alt="HealthHive Screenshot">
+                <p>A full-stack health tracking application I built with a friend. We both worked as full-stack developers on this project.</p>
+                <h4>Features:</h4>
+                <ul>
+                    <li>User authentication system</li>
+                    <li>Health data tracking</li>
+                    <li>Progress visualization with charts</li>
+                    <li>Responsive design for all devices</li>
+                </ul>
+                <p><strong>Tech Used:</strong> React.js, Django, MySQL, Bootstrap, Chart.js</p>
+                <a href="https://github.com/nxtcarson/healthhive" target="_blank">View on GitHub</a>
+            </div>
+
+            <div class="project">
+                <h3>TechMaui - Student Resource Platform</h3>
+                <img src="images/techmaui.jpg" alt="TechMaui Screenshot">
+                <p>A platform I created by myself to help students access educational tools and manage their budgets.</p>
+                <h4>Features:</h4>
+                <ul>
+                    <li>Educational tools collection</li>
+                    <li>Student expense tracker</li>
+                    <li>Budget management tools</li>
+                    <li>Safe browsing with AdBlock detection</li>
+                </ul>
+                <p><strong>Tech Used:</strong> JavaScript, HTML, CSS, Node.js</p>
+                <a href="https://github.com/nxtcarson/techmaui" target="_blank">View on GitHub</a>
+            </div>
+        </section>
+
+        <section class="contact">
+            <h2>Contact Me</h2>
+            <p>Email: <a href="mailto:nxtcarson@gmail.com">nxtcarson@gmail.com</a></p>
+            <p>GitHub: <a href="https://github.com/nxtcarson" target="_blank">github.com/nxtcarson</a></p>
+        </section>
     </main>
+
     <footer>
-        <p>&copy; 2024 Carson. All rights reserved.</p>
+        <p>&copy; 2024 Carson. All Rights Reserved.</p>
     </footer>
 </body>
 </html> 
